ai-ml-platform/gke-ai/gke-with-axion/k8s/serve_sdxl_v5e.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-diffusion-deployment
spec:
  selector:
    matchLabels:
      app: max-diffusion-server
  replicas: 1
  template:
    metadata:
      labels:
        app: max-diffusion-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
      volumes:
        - name: dshm
          emptyDir:
                medium: Memory
      containers:
      - name: serve-stable-diffusion
        image: us-docker.pkg.dev/cloudmium-1/ai-ml-arm/maxdiffusion
        securityContext:
          privileged: true
        ports:
        - containerPort: 8000
        resources: 
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "2Gi"
        volumeMounts:
            - mountPath: /dev/shm
              name: dshm
      tolerations:
      - key: kubernetes.io/arch
        operator: Equal
        value: arm64
        effect: NoSchedule
---
apiVersion: v1
kind: Service
metadata:
  name: max-diffusion-server
  labels:
    app: max-diffusion-server
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      name: http-max-diffusion-server
  selector:
    app: max-diffusion-server
